# Shadow-UEFI-Intel

./: Cargo.toml  README.md
shadow_uefi/: __init__.py  ai.py  baseline.py  cli.py  ingestion.py  models.py  parser.py  report.py
shadow_uefi_intel/: __init__.py  baseline.py  cli.py  models.py  parser.py  reporting.py  triage.py
src/: analyzer.rs  baseline.rs  image.rs  lib.rs  main.rs  models.rs  sandbox.rs
