[package]
name = "shadow-uefi-intel"
version = "0.1.0"
edition = "2024"
authors = ["Shadow Contributors"]
description = "UEFI / firmware inspection toolkit in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
walkdir = "2.5"
