[package]
name = "shadow-uefi-intel"
version = "0.1.0"
edition = "2024"
description = "UEFI / firmware inspection toolkit that parses images, baselines modules, and flags suspicious changes"
license = "MIT"
authors = ["Shadow-UEFI contributors"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
goblin = { version = "0.9", features = ["pe64", "elf64"] }
hex = "0.4"
thiserror = "1"
